Enable use of images in quay.io

--- a/playbooks/roles/central/templates/central.yml.j2
+++ b/playbooks/roles/central/templates/central.yml.j2
@@ -19,6 +19,15 @@ central:
       enabled: true
 {% endif %}
 
+{% if imageregistry != '' %}
+image:
+  registry: "{{ imageregistry }}"
+{% endif %}
+
+
+
+
+
 
 imagePullSecrets:
     username: "{{ imagepulluser }}"
