Add ability to set central version for openshift4-demo

--- a/playbooks/roles/central/templates/central.yml.j2
+++ b/playbooks/roles/central/templates/central.yml.j2
@@ -14,19 +14,16 @@ central:
     route:
       enabled: true
 {% endif %}
+{% if centraltag != '' %}
+  image:
+    tag: "{{ centraltag }}"
+{% endif %}
 
 {% if imageregistry != '' %}
 image:
   registry: "{{ imageregistry }}"
 {% endif %}
 
-
-
-
-
-
 imagePullSecrets:
     username: "{{ imagepulluser }}"
     password: "{{ imagepullpassword }}"
-
-
