--- a/playbooks/roles/demo/templates/pull_secret/pullsecret.yml.j2
+++ b/playbooks/roles/demo/templates/pull_secret/pullsecret.yml.j2
@@ -4,5 +4,5 @@ metadata:
   name: rhacs-demo-pull-pull-secret
   namespace: "{{ item }}"
 data:
-  .dockerconfigjson: ewogICJhdXRocyI6IHsKICAgICJxdWF5LmlvIjogewogICAgICAiYXV0aCI6ICJjbWhoWTNNdFpHVnRieXR3ZFd4c09rYzFUMDVDUlRZeVRVSTNWa294UzBnMVJVNVRTelZNVEVJelNUUXlORGhMTTFsVVZsYzBOVTh4U0RsQ016ZFZORmc1TWpWWFdFOVZUbFpTVmpoVU5sTT0iLAogICAgICAiZW1haWwiOiAiIgogICAgfQogIH0KfQ==
+  .dockerconfigjson:
 type: kubernetes.io/dockerconfigjson
